--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
   "target_preprocessor": {
     "name": "code_chunking",
     "args": {
-      "language": "java",
+      "language": "JAVA",
       "chunk_size": "200"
     }
   },
