--- a/config.json
+++ b/config.json
@@ -1,57 +1,54 @@
 {
-  "source_artifact_provider": {
-    "name": "text",
-    "args": {
-      "artifact_type": "requirement",
-      "path": "path-to-requirements"
+  "source_artifact_provider" : {
+    "name" : "text",
+    "args" : {
+      "artifact_type" : "requirement",
+      "path" : "./datasets/iTrust/UC"
     }
   },
-  "target_artifact_provider": {
-    "name": "text",
-    "args": {
-      "artifact_type": "source code",
-      "path": "path-to-code"
+  "target_artifact_provider" : {
+    "name" : "text",
+    "args" : {
+      "artifact_type" : "code",
+      "path" : "./datasets/iTrust/CC"
     }
   },
-  "source_preprocessor": {
-    "name": "sentence",
-    "args": {
-      "language": "en"
+  "source_preprocessor" : {
+    "name" : "sentence",
+    "args" : { }
+  },
+  "target_preprocessor" : {
+    "name" : "code_method",
+    "args" : {
+      "language" : "JAVA"
     }
   },
-  "target_preprocessor": {
-    "name": "code_chunking",
-    "args": {
-      "language": "JAVA",
-      "chunk_size": "200"
+  "embedding_creator" : {
+    "name" : "ollama",
+    "args" : {}
+  },
+  "source_store" : {
+    "name" : "custom",
+    "args" : {
+      "max_results" : "20"
     }
   },
-  "embedding_creator": {
-    "name": "ollama",
+  "target_store" : {
+    "name" : "custom",
+    "args" : {
+      "max_results" : "20"
+    }
+  },
+  "classifier" : {
+    "name" : "simple_ollama",
+    "args" : { }
+  },
+  "result_aggregator" : {
+    "name" : "any_connection",
+    "args" : { }
+  },
+  "tracelinkid_postprocessor": {
+    "name": "req2code",
     "args": {}
-  },
-  "source_store": {
-    "name": "custom",
-    "args": {
-      "direction": "source",
-      "path": "path-to-storage"
-    }
-  },
-  "target_store": {
-    "name": "custom",
-    "args": {
-      "direction": "target",
-      "path": "path-to-storage"
-    }
-  },
-  "classifier": {
-    "name": "simple_ollama",
-    "args": {}
-  },
-  "result_aggregator": {
-    "name": "any_connection",
-    "args": {
-      "source_granularity": "0"
-    }
   }
 }
