--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   "target_artifact_provider" : {
     "name" : "text",
     "args" : {
-      "artifact_type" : "code",
+      "artifact_type" : "source code",
       "path" : "./datasets/iTrust/CC"
     }
   },
@@ -18,9 +18,10 @@
     "args" : { }
   },
   "target_preprocessor" : {
-    "name" : "code_method",
+    "name" : "code_chunking",
     "args" : {
-      "language" : "JAVA"
+      "language": "JAVA",
+      "chunk_size" : "200"
     }
   },
   "embedding_creator" : {
@@ -29,9 +30,7 @@
   },
   "source_store" : {
     "name" : "custom",
-    "args" : {
-      "max_results" : "20"
-    }
+    "args" : {}
   },
   "target_store" : {
     "name" : "custom",
@@ -40,9 +39,9 @@
     }
   },
   "classifier" : {
-    "name" : "simple_ollama",
+    "name" : "reasoning_ollama",
     "args" : {
-      "template": "Question: Here are two parts of software development artifact\n{source_type}: '''{source_content}'''\n{target_type}: '''{target_content}'''\nDo I need to change one if the other changes?\nAnswer with 'yes' or 'no'."
+      "use_original_artifacts": "true"
     }
   },
   "result_aggregator" : {
