--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
             <artifactId>slf4j-simple</artifactId>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -121,10 +128,14 @@
                 <artifactId>spotless-maven-plugin</artifactId>
                 <configuration combine.self="append">
                     <java>
-                        <eclipse>
-                            <!--suppress UnresolvedMavenProperty -->
-                            <file>${maven.multiModuleProjectDirectory}/formatter.xml</file>
-                        </eclipse>
+                        <palantirJavaFormat>
+                            <version>2.39.0</version>
+                            <style>PALANTIR</style>
+                            <formatJavadoc>false</formatJavadoc>
+                        </palantirJavaFormat>
+                        <importOrder>
+                            <file>${maven.multiModuleProjectDirectory}/spotless.importorder</file>
+                        </importOrder>
                         <removeUnusedImports/>
                     </java>
                 </configuration>
