--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,10 @@
                 <artifactId>spotless-maven-plugin</artifactId>
                 <configuration combine.self="append">
                     <java>
+                        <toggleOffOn>
+                            <off>@formatter:off</off>
+                            <on>@formatter:on</on>
+                        </toggleOffOn>
                         <palantirJavaFormat>
                             <version>2.39.0</version>
                             <style>PALANTIR</style>
