--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
     </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>5.2.0</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
