Extract retrieval into strategy (#8)
* extract retrieval into strategy

* Update docs

* fix old naming

* add logging message for source store

--- a/config-template.json
+++ b/config-template.json
@@ -37,7 +37,7 @@
     "args": {}
   },
   "target_store": {
-    "name": "custom",
+    "name": "cosine_similarity",
     "args": {
       "max_results": "4"
     }
