--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <picocli.version>4.7.7</picocli.version>
+    <record-builder.version>47</record-builder.version>
+    <metrics.version>0.1.2</metrics.version>
   </properties>
 
   <dependencyManagement>
@@ -74,12 +77,12 @@
     <dependency>
       <groupId>info.picocli</groupId>
       <artifactId>picocli</artifactId>
-      <version>4.7.7</version>
+      <version>${picocli.version}</version>
     </dependency>
     <dependency>
       <groupId>io.github.ardoco</groupId>
       <artifactId>metrics</artifactId>
-      <version>0.1.1</version>
+      <version>${metrics.version}</version>
     </dependency>
 
     <dependency>
@@ -105,7 +108,7 @@
     <dependency>
       <groupId>io.soabase.record-builder</groupId>
       <artifactId>record-builder-processor</artifactId>
-      <version>47</version>
+      <version>${record-builder.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -144,7 +147,7 @@
               <on>@formatter:on</on>
             </toggleOffOn>
             <palantirJavaFormat>
-              <version>2.58.0</version>
+              <version>2.73.0</version>
               <style>PALANTIR</style>
               <formatJavadoc>false</formatJavadoc>
             </palantirJavaFormat>
@@ -231,12 +234,12 @@
             <path>
               <groupId>info.picocli</groupId>
               <artifactId>picocli-codegen</artifactId>
-              <version>4.7.7</version>
+              <version>${picocli.version}</version>
             </path>
             <path>
               <groupId>io.soabase.record-builder</groupId>
               <artifactId>record-builder-processor</artifactId>
-              <version>47</version>
+              <version>${record-builder.version}</version>
             </path>
           </annotationProcessorPaths>
           <compilerArgs>
