feat: #6 add scorer and evaluator to config add factory method to AbstractScorer add factory method to AbstractEvaluator

--- a/example-configs/optimizer-config.json
+++ b/example-configs/optimizer-config.json
@@ -37,13 +37,21 @@
   },
   "source_store" : {
     "name" : "custom",
-    "args" : { }
+    "args" : {}
   },
   "target_store" : {
     "name" : "cosine_similarity",
     "args" : {
       "max_results" : "4"
     }
+  },
+  "scorer" : {
+    "name" : "binary",
+    "args" : {}
+  },
+  "evaluator" : {
+    "name" : "ucb",
+    "args" : {}
   },
   "prompt_optimizer": {
     "name" : "gradient_openai",
