--- a/example-configs/gradient-optimizer-config.json
+++ b/example-configs/gradient-optimizer-config.json
@@ -54,16 +54,18 @@
     "args" : {}
   },
   "prompt_optimizer": {
-    "name" : "simple_openai",
+    "name" : "gradient_openai",
     "args" : {
       "prompt": "Question: Here are two parts of software development artifacts.\n\n            {source_type}: '''{source_content}'''\n\n            {target_type}: '''{target_content}'''\n            Are they related?\n\n            Answer with 'yes' or 'no'.",
-      "model": "gpt-4o-mini-2024-07-18"
+      "model": "gpt-4o-mini-2024-07-18",
+      "maximum_iterations": 2
     }
   },
   "classifier" : {
     "name" : "simple_openai",
     "args" : {
-      "model": "gpt-4o-mini-2024-07-18"
+      "model": "gpt-4o-mini-2024-07-18",
+      "temperature": 0.0
     }
   },
   "result_aggregator" : {
