feat: update optimizer configurations and enhance README with new features and usage instructions

--- a/example-configs/optimizer-config.json
+++ b/example-configs/optimizer-config.json
@@ -46,11 +46,11 @@
     }
   },
   "scorer" : {
-    "name" : "binary",
+    "name" : "mock",
     "args" : {}
   },
   "evaluator" : {
-    "name" : "ucb",
+    "name" : "mock",
     "args" : {}
   },
   "prompt_optimizer": {
