--- a/example-configs/gradient-optimizer-config.json
+++ b/example-configs/gradient-optimizer-config.json
@@ -51,14 +51,19 @@
   },
   "evaluator" : {
     "name" : "ucb",
-    "args" : {}
+    "args" : {
+      "samples_per_eval" : "16",
+      "eval_rounds" : "4",
+      "eval_prompts_per_round" : "1"
+    }
   },
   "prompt_optimizer": {
     "name" : "gradient_openai",
     "args" : {
       "prompt": "Question: Here are two parts of software development artifacts.\n\n            {source_type}: '''{source_content}'''\n\n            {target_type}: '''{target_content}'''\n            Are they related?\n\n            Answer with 'yes' or 'no'.",
       "model": "gpt-4o-mini-2024-07-18",
-      "maximum_iterations": 2
+      "maximum_iterations": 3,
+      "minibatch_size" : "20"
     }
   },
   "classifier" : {
