feat: add evaluation configurations for gradient descent optimization
 - support detection for same prompts that have been used by multiple evaluations in table generation
 - add apo evaluation script

--- a/example-configs/gradient-optimizer-config.json
+++ b/example-configs/gradient-optimizer-config.json
@@ -45,8 +45,8 @@
       "max_results" : "4"
     }
   },
-  "scorer" : {
-    "name" : "binary",
+  "metric" : {
+    "name" : "pointwise",
     "args" : {}
   },
   "evaluator" : {
