--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <picocli.version>4.7.7</picocli.version>
     <record-builder.version>51</record-builder.version>
     <metrics.version>0.1.2</metrics.version>
+    <lombok.version>1.18.40</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -115,6 +116,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -265,6 +272,11 @@
               <groupId>io.soabase.record-builder</groupId>
               <artifactId>record-builder-processor</artifactId>
               <version>${record-builder.version}</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
             </path>
           </annotationProcessorPaths>
           <compilerArgs>
